# launcher

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.ps1  build.rs  build.sh  go.mod  go.sum  main.go  with-env.sh
.github/workflows/: build.yml
env/: linux.env  m1.env  macos.env  windows.env
src/: constants.rs  download.rs  launch.rs  main.rs
src/utils/: config.rs  files.rs  log.rs  mod.rs
ui/: app-window.slint  globals.slint
ui/assets/icons/command/: play.slint  stop.slint
ui/components/: drag-bar.slint  link-entry.slint  popup.slint  toggle.slint
