[package]
name = "lilith-launcher"
version = "5.0.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpufeatures = "0.3.0"
futures = "0.3.32"
hex = "0.4.3"
log = { version = "0.4.33", features = [] }
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
slint = { version = "1.17.1", features = [
    "live-preview",
    "unstable-winit-030",
] }
tokio = { version = "1.53.0", features = ["rt", "rt-multi-thread"] }
dirs = "6.0.0"
strip-ansi-escapes = "0.2.1"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.39.6"

[build-dependencies]
slint-build = "1.17.1"
winresource = "0.1.31"

# [target.'cfg(windows)'.build-dependencies]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[package.metadata.bundle]
name = "Lilith Launcher"
identifier = "rip.lilith.launcher"
icon = [
    "icon/icon-16.png",
    "icon/icon-32.png",
    "icon/icon-64.png",
    "icon/icon-128.png",
    "icon/icon-256.png",
    "icon/icon-512.png",
    "icon/icon-1024.png",
]
version = "5.0.0"
copyright = "Copyright (c) 2026 Lilith"
category = "public.app-category.developer-tools"
short_description = "Lilith Launcher"
long_description = "Lilith Launcher"

[package.metadata.bundle.deb]
depends = ["libfontconfig1", "libxkbcommon0"]
